[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://art/tlo-menu.png" type="Texture" id=2]
[ext_resource path="res://fonts/RingbearerMedium-w173.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://art/scroll2.png" type="Texture" id=4]
[ext_resource path="res://Button.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 3 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://fonts/RingbearerMedium-w173.ttf"

[sub_resource type="DynamicFont" id=3]
size = 45
font_data = SubResource( 2 )

[node name="root" type="Node2D"]
script = ExtResource( 1 )

[node name="BackgroundSprite" type="Sprite" parent="."]
position = Vector2( 405, 540 )
texture = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = -2.28354
margin_top = 0.325287
margin_right = 807.716
margin_bottom = 1080.33
color = Color( 1, 0, 1, 1 )

[node name="Arkanoid Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_top = 60.0
margin_right = 810.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ARkanoid"
align = 1
valign = 1

[node name="GameDevLabel" type="Label" parent="."]
anchor_right = 1.0
margin_top = 180.0
margin_right = 810.0
margin_bottom = 240.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Game Dev School Remake"
align = 1
valign = 1

[node name="ScrollSprite" type="Sprite" parent="."]
position = Vector2( 405, 540 )
texture = ExtResource( 4 )

[node name="Menu" type="VBoxContainer" parent="ScrollSprite"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -521.109
margin_top = -237.784
margin_right = -281.109
margin_bottom = 242.216
alignment = 1
__meta__ = {
"_edit_group_": true
}

[node name="CenterRow" type="HBoxContainer" parent="ScrollSprite/Menu"]
margin_top = 58.0
margin_right = 239.0
margin_bottom = 421.0
alignment = 1
__meta__ = {
"_edit_group_": true
}

[node name="Buttons" type="VBoxContainer" parent="ScrollSprite/Menu/CenterRow"]
margin_right = 239.0
margin_bottom = 363.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 32

[node name="PlayButton" parent="ScrollSprite/Menu/CenterRow/Buttons" instance=ExtResource( 5 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 239.0
margin_bottom = 47.0
text = "Play"

[node name="LevelSelect" parent="ScrollSprite/Menu/CenterRow/Buttons" instance=ExtResource( 5 )]
margin_left = 0.0
margin_top = 79.0
margin_right = 239.0
margin_bottom = 126.0

[node name="HighscoreButton" parent="ScrollSprite/Menu/CenterRow/Buttons" instance=ExtResource( 5 )]
margin_left = 0.0
margin_top = 158.0
margin_right = 239.0
margin_bottom = 205.0
text = "Highscore"

[node name="Credits" parent="ScrollSprite/Menu/CenterRow/Buttons" instance=ExtResource( 5 )]
margin_left = 0.0
margin_top = 237.0
margin_right = 239.0
margin_bottom = 284.0

[node name="Exit" parent="ScrollSprite/Menu/CenterRow/Buttons" instance=ExtResource( 5 )]
margin_left = 0.0
margin_top = 316.0
margin_right = 239.0
margin_bottom = 363.0
text = "Exit"

[node name="HighScoreLabel" type="Label" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 307.576
margin_top = 547.161
margin_right = 439.576
margin_bottom = 561.161
text = "000"
align = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
[connection signal="pressed" from="ScrollSprite/Menu/CenterRow/Buttons/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="ScrollSprite/Menu/CenterRow/Buttons/LevelSelect" to="." method="_on_LevelSelect_pressed"]
[connection signal="pressed" from="ScrollSprite/Menu/CenterRow/Buttons/HighscoreButton" to="." method="_on_HighscoreButton_pressed"]
[connection signal="pressed" from="ScrollSprite/Menu/CenterRow/Buttons/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="ScrollSprite/Menu/CenterRow/Buttons/Exit" to="." method="_on_Exit_pressed"]
